--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="container">
 				<div class="boxnav">
 					<div class="box" >
-						<h1>Siska</h1>
+						<h1>TheBibi</h1>
 					</div>
 					<div class="box mnav">
 						<ul>
